--- a/1_basicJavascript/index.html
+++ b/1_basicJavascript/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Javascript basic</h1>
+    <h1>Javascript basic</h1>
     <script src="./main.js"> </script>
 </body>
 </html>
+
