--- a/1_BasicReact/index.html
+++ b/1_BasicReact/index.html
@@ -5,42 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reaxt js</title>
-    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
-
+    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 </head>
 
 
 <body>
     <div id = "root"> </div>
-    <script >
-        //Hiển thị H1: hello guys với DOM
-        const root = document.getElementById('root')
-        const h1DOM = document.createElement('h1')
-        h1DOM.innerText = "Hello guys"
-        root.appendChild(h1DOM)
+    <script type="text/babel">
+        //Get root element
+        const container = document.getElementById('root');
 
-        //Hiển thị ul-li với DOM
-        const ulDOM = document.createElement('ul')
-        const liDOM1 = document.createElement('li')
-        const liDOM2 = document.createElement('li')
-        liDOM1.innerText = "Javascript"
-        liDOM2.innerText = "PHP"
-        ulDOM.appendChild(liDOM1)
-        ulDOM.appendChild(liDOM2)
-        document.body.appendChild(ulDOM)
+        //React DOM -> render to block to UI
 
-        //Hiển thị ul-li với React
-        const ulReact = React.createElement(
+        //React DOM -> render UL LI to UI
+        const ulReact1 = React.createElement(
             'ul',
-            {
-                id : 'ul-id',
-                style:'color: red, font-size:30px'
-            },
-            React.createElement('li', null, 'Javascript'),
-            React.createElement('li', null, 'PHP'),
+            null,
+            React.createElement('li',null, 'Javascript'),
+            React.createElement('li',null, 'ReactJs')
         )
-        console.log(ulReact)
+        //@React 17
+        //ReactDOM.render(ulReact1, root)
 
+        //@React version18
+        const root = ReactDOM.createRoot(container);
+        root.render(ulReact1);
     </script>
 </body>
 </html>
